--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,2 @@
-url: "https://jezuro.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-baseurl: "/jezuro-site" # the subpath of your site, e.g. /blog
+url: "https://jezuro.com" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "" # the subpath of your site, e.g. /blog
